# ha-philipsjs

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py  test2.py
.github/workflows/: ci.yaml
haphilipsjs/: __init__.py  __main__.py  auth.py  typing.py
haphilipsjs/data/: __init__.py  v1.py  v6.py
haphilipsjs/dummy/: __init__.py  v1.py
haphilipsjs/tests/: test_v1.py
tests/: test_auth.py  test_v1.py  test_v6.py
